# omnishop

./: .env.example  .gitignore  README.md  walkthrough.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_omnibot.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  conversations.py  orders.py  products.py  router.py  transactions.py  webhooks.py
backend/app/auth/: jwt_handler.py  telegram_verify.py
backend/app/db/: __init__.py  backfill.py
backend/app/middleware/: correlation_id.py  rate_limiter.py
backend/app/models/: __init__.py  auto_response.py  conversation.py  order.py  payment.py  product.py  seller.py  transaction.py
backend/app/schemas/: auth.py  conversation.py  order.py  payment.py  product.py  transaction.py
backend/app/services/: auto_responder.py  conversations.py  distance.py  instagram.py  notifications.py  order_state.py  orders.py  payway.py  storage.py  telegram.py
backend/tests/: conftest.py  test_auth.py  test_backfill.py  test_distance.py  test_order_state.py  test_orders.py  test_payway.py  test_products.py
docs/: efdd-omnibot.md
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.module.css  page.tsx
frontend/src/components/: CartDrawer.module.css  CartDrawer.tsx  DeliveryLocationPicker.module.css  DeliveryLocationPicker.tsx  EmptyState.module.css  EmptyState.tsx  Header.tsx  (+11 more)
(+20 files in other folders)
